--- a/templates/base/admin/user.latte
+++ b/templates/base/admin/user.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4 w-full max-w-5xl mx-auto">
-        <form action="{= _BASE_PATH . 'admin/user/post'}" method="POST" enctype="multipart/form-data">
+        <form action="{= _p('BASE_PATH') . 'admin/user/post'}" method="POST" enctype="multipart/form-data">
             <div class="space-y-4">
                 <h1 class="leading-none text-6xl font-bold">Users</h1>
 
