--- a/templates/base/admin/logout.latte
+++ b/templates/base/admin/logout.latte
@@ -2,11 +2,11 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{= _BASE_PATH . 'admin/user/logout'}" method="POST" enctype="multipart/form-data">
+        <form action="{= _p('BASE_PATH') . 'admin/user/logout'}" method="POST" enctype="multipart/form-data">
             <div class="space-y-4">
 
                 <div class="text-center">
-                    {\Ivy\Button::submit(__('core.button.logout'))}
+                    {\Ivy\Button::submit(_t('core.button.logout'))}
                 </div>
 
             </div>
