--- a/templates/base/admin/plugin.latte
+++ b/templates/base/admin/plugin.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4 w-full max-w-5xl mx-auto">
-        <form action="{= _BASE_PATH . 'admin/plugin/post'}" method="POST" enctype="multipart/form-data">
+        <form action="{= _p('BASE_PATH') . 'admin/plugin/post'}" method="POST" enctype="multipart/form-data">
             <div class="space-y-4">
 
                 <h1 class="leading-none text-6xl font-bold">Plugins</h1>
@@ -20,30 +20,30 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {foreach $installed_plugins as $plugin}
+                        {foreach $installed_plugins as $key => $plugin}
                             <tr>
                                 <td>
-                                    {\Ivy\Button::switch('plugin[' . $plugin->getId() . '][active]', $plugin->active, 'plugin_' . $plugin->getId())}
+                                    {\Ivy\Button::switch("plugin[$key][active]", $plugin->getActive())}
                                 </td>
-                                <td><strong>{$plugin->name}</strong></td>
-                                <td>{$plugin->description}</td>
-                                <td>{$plugin->version}</td>
-                                <td>{$plugin->type}</td>
+                                <td><strong>{$plugin->getName()}</strong></td>
+                                <td>{$plugin->getDescription()}</td>
+                                <td>{$plugin->getVersion()}</td>
+                                <td>{$plugin->getType()}</td>
                                 <td class="text-right">
-                                    <input type="hidden" name="plugin[{$plugin->getId()}][id]"
+                                    <input type="hidden" name="plugin[{$key}][id]"
                                            value="{$plugin->getId()}">
                                     <div class="join">
-                                        <a n:if="$plugin->collection && $plugin->active"
+                                        <a n:if="$plugin->getCollection() && $plugin->getActive()"
                                                 class="btn btn-neutral btn-square join-item"
-                                                href="{= _BASE_PATH . 'plugin' . DIRECTORY_SEPARATOR . $plugin->getUrl() . DIRECTORY_SEPARATOR . 'collection'}">
+                                                href="{= _p('BASE_PATH') . 'plugin' . DIRECTORY_SEPARATOR . $plugin->getUrl() . DIRECTORY_SEPARATOR . 'collection'}">
                                             {icon("feather/package.svg")|noescape}
                                         </a>
-                                        <a n:if="$plugin->settings && $plugin->active"
+                                        <a n:if="$plugin->getSettings() && $plugin->getActive()"
                                                 class="btn btn-neutral btn-square join-item"
-                                                href="{= _BASE_PATH . 'plugin' . DIRECTORY_SEPARATOR . $plugin->getUrl() . DIRECTORY_SEPARATOR . 'settings'}">
+                                                href="{= _p('BASE_PATH') . 'plugin' . DIRECTORY_SEPARATOR . $plugin->getUrl() . DIRECTORY_SEPARATOR . 'settings'}">
                                             {icon("feather/settings.svg")|noescape}
                                         </a>
-                                        {\Ivy\Button::delete('plugin[' . $plugin->getId() . '][delete]', "plugin_" . $plugin->getId())}
+                                        {\Ivy\Button::delete("plugin[$key][delete]", "plugin_" . $plugin->getId())}
                                     </div>
                                 </td>
                             </tr>
