--- a/templates/base/admin/reset.latte
+++ b/templates/base/admin/reset.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{= _BASE_PATH . 'admin/user/reset'}" method="POST" enctype="multipart/form-data"
+        <form action="{= _p('BASE_PATH') . 'admin/user/reset'}" method="POST" enctype="multipart/form-data"
               class="max-w-xl mx-auto">
             <div class="space-y-4">
                 <h1 class="leading-none text-6xl font-bold">Reset</h1>
