--- a/templates/base/include/header.latte
+++ b/templates/base/include/header.latte
@@ -2,7 +2,7 @@
     <div class="border-b dark:border-slate-700 flex">
         <div class="flex-1 p-4">
             <a href="{= _p('BASE_PATH')}" class="leading-none text-xl font-bold">
-                {\Ivy\Setting::getStash()['name']->getValue()}
+                {= _s('name')}
             </a>
         </div>
         <div class="px-4 flex gap-4 items-center">
